--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
-</head>
-
-<body>
-  <main>
-    <h1>Vanilla JavaScript App</h1>
-  </main>
-</body>
-
-</html>
+<main>
+  <h1>Welcome to E-Learning Platform</h1>
+  <section>
+    <h2>Our Courses</h2>
+    <p>Explore a variety of courses to boost your career.</p>
+    <ul>
+      <li>Web Development</li>
+      <li>Data Science</li>
+      <li>AI & ML</li>
+    </ul>
+  </section>
+  <section>
+    <h2>Current Promotions</h2>
+    <p>Enroll today and get a 20% discount!</p>
+  </section>
+</main>
