--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,43 @@
-<main>
-  <h1>Welcome to E-Learning Platform</h1>
-  <section>
-    <h2>Our Courses</h2>
-    <p>Explore a variety of courses to boost your career.</p>
-    <ul>
-      <li>Web Development</li>
-      <li>Data Science</li>
-      <li>AI & ML</li>
-    </ul>
-  </section>
-  <section>
-    <h2>Current Promotions</h2>
-    <p>Enroll today and get a 20% discount!</p>
-  </section>
-</main>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>E-Learning Platform</title>
+</head>
+
+<body>
+  <header>
+    <div class="navbar">
+      <h1 class="logo">LearnHub</h1>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="#courses">Courses</a></li>
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <section class="hero">
+      <div class="hero-content">
+        <h1>Welcome to LearnHub</h1>
+        <p>Empower your future with our expertly curated courses!</p>
+        <a href="#courses" class="btn">Explore Courses</a>
+      </div>
+    </section>
+
+    <section id="courses" class="courses">
+      <h2>Our Courses</h2>
+      <div class="course-list">
+        <div class="course-card">
+          <h3>Web Development</h3>
+          <p>Learn how to build stunning websites from scratch.</p>
+        </div>
+        <div class="course-card">
+          <h3>Data Science</h3>
+          <p>Master data analysis, visualization, and machine
