--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,14 @@
   <header>
     <div class="navbar">
       <div class="logo">E-Learn</div>
-      <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#courses">Courses</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
+      <nav>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#courses">Courses</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
 
@@ -26,26 +28,26 @@
   <section class="hero" id="home">
     <div class="hero-content">
       <h1>Welcome to E-Learning</h1>
-      <p>Your journey to knowledge starts here. Explore our courses and transform your future.</p>
-      <a href="#courses" class="btn">Explore Courses</a>
+      <p>Explore courses and advance your skills from the comfort of your home.</p>
+      <a href="#courses" class="btn">Browse Courses</a>
     </div>
   </section>
 
   <!-- Courses Section -->
   <section class="courses" id="courses">
-    <h2>Our Courses</h2>
+    <h2>Our Popular Courses</h2>
     <div class="course-list">
       <div class="course-card">
         <h3>Web Development</h3>
-        <p>Learn HTML, CSS, JavaScript, and more to become a professional web developer.</p>
+        <p>Learn HTML, CSS, JavaScript, and more!</p>
       </div>
       <div class="course-card">
         <h3>Data Science</h3>
-        <p>Master Python, Machine Learning, and Data Analysis to unlock new career opportunities.</p>
+        <p>Master Python, Machine Learning, and Data Analysis.</p>
       </div>
       <div class="course-card">
         <h3>Digital Marketing</h3>
-        <p>Explore SEO, Social Media Marketing, and PPC strategies to grow any business.</p>
+        <p>Learn SEO, Social Media Marketing, and PPC strategies.</p>
       </div>
     </div>
   </section>
@@ -53,16 +55,13 @@
   <!-- About Section -->
   <section class="about" id="about">
     <h2>About Us</h2>
-    <p>
-      At E-Learn, we are dedicated to providing top-notch education with expert instructors, innovative tools, and a
-      supportive learning environment. Join thousands of learners and achieve your goals today.
-    </p>
+    <p>We are an online platform that helps learners grow their skills and advance their careers with top-notch courses and expert instructors.</p>
   </section>
 
   <!-- Contact Section -->
   <section class="contact" id="contact">
     <h2>Contact Us</h2>
-    <form>
+    <form action="#">
       <input type="text" placeholder="Your Name" required>
       <input type="email" placeholder="Your Email" required>
       <textarea placeholder="Your Message" rows="5" required></textarea>
